<resources>
    <string name="app_name">Driver Portal</string>
    <string name="google_maps_api_key">AIzaSyANl8QdvWwyLjMGy9J1J9wX7aFuZVEvfKs</string>

    <string name="change_password">Change Password</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="driver_id">Driver ID</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>

    <string name="routes">Routes</string>
    <string name="select_route">Choose a route from server</string>
    <string name="search_hint">Search routes</string>
    <string name="suggestions">Suggestions</string>
    <string name="set_active_route">Set active route</string>

    <string name="cancel">Cancel</string>
</resources>
